--- a/src/UpdateBundle/Resources/config/services.yml
+++ b/src/UpdateBundle/Resources/config/services.yml
@@ -3,17 +3,28 @@ parameters:
      url_detail_package: 'https://packagist.org/packages/'
      
 services:
-      list_packages:
+      store_packages_names:
            class: UpdateBundle\ListPackages
            arguments: 
                - %url_list_packages%
-               - %url_detail_package%
-               - "@old_sound_rabbit_mq.list_package_producer"
+               - "@old_sound_rabbit_mq.store_packages_names_producer"
                
-      store_packages:
+      list_packages_details:
           class: UpdateBundle\Consumer\UpdatePackagesNames
           arguments: 
-              - '@doctrine.odm.mongodb.document_manager'
+              - %url_detail_package%
+              - "@store_packages_details"
+      store_packages_details:  
+          class: UpdateBundle\DetailsPackages
+          arguments: 
+              - "@old_sound_rabbit_mq.store_packages_details_producer"
+      persist_packages:
+           class: UpdateBundle\Consumer\UpdateDatabase
+           arguments: 
+              - "@doctrine.odm.mongodb.document_manager"
+              
+          
+              
               
               
            
