--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,3 +17,9 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+    
+    amqp_host: localhost
+    amqp_port: 5662
+    amqp_user: guest
+    amqp_password: guest
+    amqp_vhost: '/'
