Add logger to consumer

--- a/src/UpdateBundle/Resources/config/services.yml
+++ b/src/UpdateBundle/Resources/config/services.yml
@@ -23,6 +23,7 @@ services:
            class: UpdateBundle\Consumer\UpdateDatabase
            arguments: 
               - "@doctrine.odm.mongodb.document_manager"
+              - "@logger"
               
           
               
